--- a/app/views/v1/armed-forces.html
+++ b/app/views/v1/armed-forces.html
@@ -27,14 +27,14 @@
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="armed-forces-yes" class="block-label">
           Yes
-          <input type="radio" id="armed-forces-yes" name="armed-forces" value="yes" {% if armedforces.leaving == "yes" %}checked="checked"{% endif %}>
+          <input type="radio" id="armed-forces-yes" name="armed-forces" value="yes" {% if session.armedforces.leaving == "yes" %}checked="checked"{% endif %}>
         </label>
       </div>
 
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="armed-forces-no" class="block-label">
           No
-          <input type="radio" id="armed-forces-no" name="armed-forces" value="no" {% if armedforces.leaving == "no" %}checked="checked"{% endif %}>
+          <input type="radio" id="armed-forces-no" name="armed-forces" value="no" {% if session.armedforces.leaving == "no" %}checked="checked"{% endif %}>
         </label>
       </div>
     </fieldset>
@@ -43,7 +43,7 @@
       <fieldset>
         <div class="form-group">
           <label for="service-no">Your service or personnel number</label>
-          <input type="text" id="service-no" name="service-no" value="{{ armedforces.serviceno }}">
+          <input type="text" id="service-no" name="service-no" value="{{ session.armedforces.serviceno }}">
         </div>
       </fieldset>
 
@@ -54,15 +54,15 @@
         <div class="form-group -date">
           <div>
             <label for="enlistment-day">Day</label>
-            <input type="text" id="enlistment-day" name="enlistment-day" value="{{ armedforces.enlistment.day }}" class="day" maxlength="2">
+            <input type="text" id="enlistment-day" name="enlistment-day" value="{{ session.armedforces.enlistment.day }}" class="day" maxlength="2">
           </div>
           <div>
             <label for="enlistment-month">Month</label>
-            <input type="text" id="enlistment-month" name="enlistment-month" value="{{ armedforces.enlistment.month }}" class="month" maxlength="2">
+            <input type="text" id="enlistment-month" name="enlistment-month" value="{{ session.armedforces.enlistment.month }}" class="month" maxlength="2">
           </div>
           <div>
             <label for="enlistment-year">Year</label>
-            <input type="text" id="enlistment-year" name="enlistment-year" value="{{ armedforces.enlistment.year }}" class="year" maxlength="4">
+            <input type="text" id="enlistment-year" name="enlistment-year" value="{{ session.armedforces.enlistment.year }}" class="year" maxlength="4">
           </div>
           <p class="form-hint">
             For example, 12 / 10 / 2004
@@ -74,7 +74,7 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'previous-address' %}
-      {% if edit == true %}
+      {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
