--- a/app/views/v1/contact-details.html
+++ b/app/views/v1/contact-details.html
@@ -24,18 +24,18 @@
     <fieldset>
       <div class="form-group">
         <label for="telephone">Phone number</label>
-        <input type="tel" id="telephone" name="telephone" value="{{ contact.telephone }}">
+        <input type="tel" id="telephone" name="telephone" value="{{ session.contact.telephone }}">
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" id="email" name="email" value="{{ contact.email }}">
+        <input type="text" id="email" name="email" value="{{ session.contact.email }}">
       </div>
     </fieldset>
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'home-address' %}
-      {% if edit == true %}
+      {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
