--- a/app/views/v1/from-abroad.html
+++ b/app/views/v1/from-abroad.html
@@ -27,14 +27,14 @@
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="abroad-yes" class="block-label">
           Yes
-          <input type="radio" id="abroad-yes" name="abroad" value="yes" {% if abroad.boolean == "yes" %}checked="checked"{% endif %}>
+          <input type="radio" id="abroad-yes" name="abroad" value="yes" {% if session.abroad.boolean == "yes" %}checked="checked"{% endif %}>
         </label>
       </div>
 
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="abroad-no" class="block-label">
           No
-          <input type="radio" id="abroad-no" name="abroad" value="no" {% if abroad.boolean == "no" %}checked="checked"{% endif %}>
+          <input type="radio" id="abroad-no" name="abroad" value="no" {% if session.abroad.boolean == "no" %}checked="checked"{% endif %}>
         </label>
       </div>
     </fieldset>
@@ -48,15 +48,15 @@
         <div class="form-group -date">
           <div>
             <label for="arrival-day">Day</label>
-            <input type="text" id="arrival-day" name="arrival-day" value="{{ abroad.arrival.day }}" class="day" maxlength="2">
+            <input type="text" id="arrival-day" name="arrival-day" value="{{ session.abroad.arrival.day }}" class="day" maxlength="2">
           </div>
           <div>
             <label for="arrival-month">Month</label>
-            <input type="text" id="arrival-month" name="arrival-month" value="{{ abroad.arrival.month }}" class="month" maxlength="2">
+            <input type="text" id="arrival-month" name="arrival-month" value="{{ session.abroad.arrival.month }}" class="month" maxlength="2">
           </div>
           <div>
             <label for="arrival-year">Year</label>
-            <input type="text" id="arrival-year" name="arrival-year" value="{{ abroad.arrival.year }}" class="year" maxlength="4">
+            <input type="text" id="arrival-year" name="arrival-year" value="{{ session.abroad.arrival.year }}" class="year" maxlength="4">
           </div>
           <p class="form-hint">
             For example, 12 / 10 / 2004
@@ -71,15 +71,15 @@
         <div class="form-group -date">
           <div>
             <label for="leaving-day">Day</label>
-            <input type="text" id="leaving-day" name="leaving-day" value="{{ abroad.leaving.day }}" class="day" maxlength="2">
+            <input type="text" id="leaving-day" name="leaving-day" value="{{ session.abroad.leaving.day }}" class="day" maxlength="2">
           </div>
           <div>
             <label for="leaving-month">Month</label>
-            <input type="text" id="leaving-month" name="leaving-month" value="{{ abroad.leaving.month }}" class="month" maxlength="2">
+            <input type="text" id="leaving-month" name="leaving-month" value="{{ session.abroad.leaving.month }}" class="month" maxlength="2">
           </div>
           <div>
             <label for="leaving-year">Year</label>
-            <input type="text" id="leaving-year" name="leaving-year" value="{{ abroad.leaving.year }}" class="year" maxlength="4">
+            <input type="text" id="leaving-year" name="leaving-year" value="{{ session.abroad.leaving.year }}" class="year" maxlength="4">
           </div>
         </div>
       </fieldset>
@@ -88,7 +88,7 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'previous-address' %}
-      {% if edit == true %}
+      {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
