--- a/app/views/v1/nhs-number.html
+++ b/app/views/v1/nhs-number.html
@@ -27,14 +27,14 @@
       <div class="form-group {% if errors.known %}-errors{% endif %}">
         <label for="nhs-number-yes" class="block-label">
           Yes
-          <input type="radio" id="nhs-number-yes" name="nhs-number-known" value="yes" {% if nhsnumber.known == "yes" %}checked="checked"{% endif %}>
+          <input type="radio" id="nhs-number-yes" name="nhs-number-known" value="yes" {% if session.nhsnumber.known == "yes" %}checked="checked"{% endif %}>
         </label>
       </div>
 
       <div class="form-group {% if errors.known %}-errors{% endif %}">
         <label for="nhs-number-no" class="block-label">
           No
-          <input type="radio" id="nhs-number-no" name="nhs-number-known" value="no" {% if nhsnumber.known == "no" %}checked="checked"{% endif %}>
+          <input type="radio" id="nhs-number-no" name="nhs-number-known" value="no" {% if session.nhsnumber.known == "no" %}checked="checked"{% endif %}>
         </label>
       </div>
     </fieldset>
@@ -51,7 +51,7 @@
       <fieldset>
         <div class="form-group {% if errors.number %}-errors{% endif %}">
           <label for="nhs-number" class="secondary">What is your NHS number?</label>
-          <input type="text" id="nhs-number" name="nhs-number" value="{{ nhsnumber.number }}" class="-small">
+          <input type="text" id="nhs-number" name="nhs-number" value="{{ session.nhsnumber.number }}" class="-small">
         </div>
         <p class="form-hint">
           For example, 943 476 5919
@@ -80,7 +80,7 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'contact-details' %}
-      {% if edit == true %}
+      {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
