--- a/app/views/v1/previous-address-postcode.html
+++ b/app/views/v1/previous-address-postcode.html
@@ -30,7 +30,7 @@
             Flat or house number, or house name (optional)
             <span class="form-hint">For example, 122 or 17c</span>
           </label>
-          <input type="text" id="building" name="building" value="{{ building }}" class="-small">
+          <input type="text" id="building" name="building" value="{{ session.prevbuilding }}" class="-small">
         </div>
       </div>
 
@@ -45,7 +45,7 @@
       <div class="form-group {% if error.postcode %}-errors{% endif %}">
         <div>
           <label for="postcode">Postcode</label>
-          <input type="text" id="postcode" name="postcode" value="{{ postcode }}" class="-small">
+          <input type="text" id="postcode" name="postcode" value="{{ session.prevpostcode }}" class="-small">
         </div>
       </div>
     </fieldset>
@@ -53,7 +53,7 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Find address</button>
       {% set back = 'previous-address' %}
-      {% if edit == true %}
+      {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
@@ -61,5 +61,3 @@
 
   </form>
 {% endblock %}
-
-{% block footer %}{% endblock %}
