--- a/app/views/v1/previous-address.html
+++ b/app/views/v1/previous-address.html
@@ -27,14 +27,14 @@
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="prev-address-yes" class="block-label">
           Yes
-          <input type="radio" id="prev-address-yes" name="prev-address" value="yes" {% if prevaddress == "yes" %}checked="checked"{% endif %}>
+          <input type="radio" id="prev-address-yes" name="prev-address" value="yes" {% if session.prevaddress == "yes" %}checked="checked"{% endif %}>
         </label>
       </div>
 
       <div class="form-group {% if error %}-errors{% endif %}">
         <label for="prev-address-no" class="block-label">
           No
-          <input type="radio" id="prev-address-no" name="prev-address" value="no" {% if prevaddress == "no" %}checked="checked"{% endif %}>
+          <input type="radio" id="prev-address-no" name="prev-address" value="no" {% if session.prevaddress == "no" %}checked="checked"{% endif %}>
         </label>
       </div>
     </fieldset>
@@ -42,7 +42,7 @@
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
       {% set back = 'current-gp' %}
-      {% if edit == true %}
+      {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
       <a href="{{ back }}" class="button -back">Back</a>
