--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,6 +9,7 @@
   <h2>Research triggers</h2>
   <ul>
     <li><a href="/v1/start">GMS1 form, v1.0</a></li>
+    <li><a href="/v1.1/start">GMS1 form, v1.1</a></li>
   </ul>
 {% endblock %}
 
