Simple feedback link added to banner

--- a/app/assets/sass/modules/banner/_prototype.scss
+++ b/app/assets/sass/modules/banner/_prototype.scss
@@ -2,6 +2,10 @@
   background-color: $dark-grey;
   color: #d9e1e2;
   font-size: $smallprint;
+
+  a {
+    color: #d9e1e2;
+  }
 }
 
 .prototype-warning-inner {
