--- a/app/views/_includes/prototype-warning.html
+++ b/app/views/_includes/prototype-warning.html
@@ -1,5 +1,5 @@
 <div class="prototype-warning">
   <p class="prototype-warning-inner">
-    Please note: this is <strong>not</strong> a functional service. No data is saved.
+    Please note: this is <strong>not</strong> a functional service. No data is saved. Feedback? Get in touch at <a href="mailto:rgp-team@digital.nhs.uk">rgp-team@digital.nhs.uk</a>
   </p>
 </div>
