--- a/app/assets/sass/app.scss
+++ b/app/assets/sass/app.scss
@@ -6,7 +6,7 @@
 @import "variables/frutiger";
 //@import "variables/fs-me";
 
-//Typopgraphy
+//Typography
 @import "modules/typography/base";
 @import "modules/typography/headings";
 @import "modules/typography/paragraphs";
@@ -33,6 +33,7 @@
 @import "modules/forms/label";
 @import "modules/forms/radio-checkbox";
 @import "modules/forms/textarea";
+@import "modules/gp-lookup/gp-lookup";
 @import "modules/header-global/header-global";
 @import "modules/header-local/header-panel-local";
 @import "modules/signage/info";
