--- a/app/views/v1_1/current-gp.html
+++ b/app/views/v1_1/current-gp.html
@@ -16,57 +16,28 @@
   <form method="post">
     <fieldset>
 
-      {% if errors.registered %}
+      {% if error %}
         <div class="error-summary">
           <div>
-            <p>{{ errors.registered }}</p>
+            <p>{{ error }}</p>
           </div>
         </div>
       {% endif %}
 
-      <div class="form-group {% if errors.registered %}-errors{% endif %}">
+      <div class="form-group {% if error %}-errors{% endif %}">
         <label for="current-gp-yes" class="block-label">
           Yes
           <input type="radio" id="current-gp-yes" name="current-gp" value="yes" {% if session.currentgp.registered == "yes" %}checked="checked"{% endif %}>
         </label>
       </div>
 
-      <div class="form-group {% if errors.registered %}-errors{% endif %}">
+      <div class="form-group {% if error %}-errors{% endif %}">
         <label for="current-gp-no" class="block-label">
           No
           <input type="radio" id="current-gp-no" name="current-gp" value="no" {% if session.currentgp.registered == "no" %}checked="checked"{% endif %}>
         </label>
       </div>
     </fieldset>
-
-    <div id="current-gp-entry" class="measure">
-      {% if errors.details %}
-        <div class="error-summary">
-          <div>
-            <p>{{ errors.details }}</p>
-          </div>
-        </div>
-      {% endif %}
-
-      <fieldset>
-        <div class="form-group {% if errors.details %}-errors{% endif %}">
-          <label for="current-gp-name">
-            Your current GP’s name
-            <span class="form-hint">
-              If you know it
-            </span>
-          </label>
-          <input type="text" id="current-gp-name" name="current-gp-name" value="{{ session.currentgp.name }}">
-        </div>
-
-        <div class="form-group {% if errors.details %}-errors{% endif %}">
-          <label for="current-gp">
-            Your current GP’s address
-          </label>
-          <textarea rows="6" id="current-gp-address" name="current-gp-address">{{ session.currentgp.address }}</textarea>
-        </div>
-      </fieldset>
-    </div>
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
@@ -78,24 +49,4 @@
     </div>
 
   </form>
-{% endblock %}
-
-{% block body_after %}
-  <script>
-    $(function() {
-      var $group = $('#current-gp-entry');
-      var $els = $('[name="current-gp"]');
-      var $selectedEl = $('[name="current-gp"]:checked');
-      if ($selectedEl.val() !== "yes") {
-        $group.hide();
-      }
-      $els.on('change', function(e) {
-        if (this.value === "yes") {
-          $group.show();
-        } else {
-          $group.hide();
-        }
-      });
-    });
-  </script>
 {% endblock %}
