--- a/app/views/v1_1/gp-lookup.html
+++ b/app/views/v1_1/gp-lookup.html
@@ -8,7 +8,15 @@
 <script src="/scripts/react-dom.js"></script>
 <script src="/scripts/gp-lookup/lookup.js"></script>
 <script src="/scripts/gp-lookup/components.js"></script>
-{% endblock %}
-
-{% block content %}
+<script>
+  $(function() {
+    $('#content').on('click', '.result', function() {
+      var els = ''
+      els += '<input type="hidden" name="practice-name" value="' + $(this).find('h2').text() + '" />'
+      els += '<input type="hidden" name="practice-address" value="' + $(this).find('.address').text() + '" />'
+      $(this).append(els);
+      $('#gp-results').submit();
+    });
+  });
+</script>
 {% endblock %}
