--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,8 +8,18 @@
   <p>...</p>
   <h2>Research triggers</h2>
   <ul>
-    <li><a href="/v1/start">GMS1 form, v1.0</a></li>
-    <li><a href="/v1.1/start">GMS1 form, v1.1</a></li>
+    <li>
+      <p>
+        <a href="/v1/start">GMS1 form, v1.0</a><br>
+        GMS1 form translated into online journey
+      </p>
+    </li>
+    <li>
+      <p>
+        <a href="/v1.1/start">GMS1 form, v1.1</a><br>
+        As above, added GP lookup functionality
+      </p>
+    </li>
   </ul>
 {% endblock %}
 
