--- a/app/views/v1_1/from-abroad.html
+++ b/app/views/v1_1/from-abroad.html
@@ -84,7 +84,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'previous-address' %}
+      {% set back = 'armed-forces' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
