--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,7 +11,8 @@
     <li>
       <p>
         <a href="/v1.1/start">GMS1 form, v1.1</a><br>
-        As above, added GP lookup functionality
+        Added GP lookup functionality<br>
+        Reduced hinting where it was duplicated
       </p>
     </li>
     <li>
