--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,7 +5,14 @@
 {% block content %}
   <h1>Prototypes</h1>
   <h2>Proposition</h2>
-  <p>...</p>
+  <ul>
+    <li>
+      <p>
+        <a href="/mvp-v1/start">MVP, v1.0</a><br>
+        Initial proposition, minimum viable product
+      </p>
+    </li>
+  </ul>
   <h2>Research triggers</h2>
   <ul>
     <li>
