--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,4 +1,3 @@
-@import url("//fast.fonts.net/cssapi/4c65968f-c33e-4eb6-9a5d-ab4f81a0543f.css");
 .grid-row, .prototype-warning-inner, .breadcrumb, .footer-container, .-date, .error-summary, form, .form-group, #global-header, .signage {
   zoom: 1;
 }
@@ -34,7 +33,7 @@ we can add other blues, named like blue40 (for a lighter blue) or blue60 for a d
 16px
 */
 body, pre.user-input {
-  font-family: "Neue Frutiger W01", sans-serif;
+  font-family: "Frutiger Neue", "Frutiger", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 32px;
@@ -798,12 +797,9 @@ textarea {
   background-image: linear-gradient(to bottom, #d9e1e2 0, rgba(255, 255, 255, 0) 1px);
   background-repeat: repeat-y;
   background-size: 100% 32px;
-}
-
-@media (min-width: 500px) {
-  textarea {
+  /*@include media(mid) {
     width: 75%;
-  }
+  }*/
 }
 
 textarea:focus {
