--- a/app/views/mvp_v1/allergies-details.html
+++ b/app/views/mvp_v1/allergies-details.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout.html' %}
 
 {% block page_title %}
-  Your date of birth :
+  Your allergies :
   {% if practiceName %}
     Register with {{ practiceName }}
   {% else %}
@@ -12,7 +12,7 @@
 {% block content %}
   <form method="post">
 
-    <h1 class="primary">Your current medication</h1>
+    <h1 class="primary">Your allergies</h1>
 
     <div class="measure">
 
@@ -25,13 +25,13 @@
       {% endif %}
 
       <div class="form-group {% if error %}-errors{% endif %}">
-        <label for="medication-details">Please list the medicines you use regularly</label>
-        <textarea name="medication-details" id="medication-details" rows="6">{% if session.health.medicationDetails !== "no" %}{{ session.health.medication }}{% endif %}</textarea>
+        <label for="allergies-details">Please list your allergies</label>
+        <textarea name="allergies-details" id="allergies-details" rows="6">{% if session.health.allergies !== "no" %}{{ session.health.allergiesDetails }}{% endif %}</textarea>
       </div>
 
       <div class="form-group -controls">
         <button type="submit" class="button">Continue</button>
-        {% set back = 'current-medication' %}
+        {% set back = 'any-allergies' %}
         <a href="{{ back }}" class="button -back">Back</a>
       </div>
 
