Copy mvp1 into mvp1.1

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,6 +8,12 @@
   <ul>
     <li>
       <p>
+        <a href="/mvp-v1.1/start">MVP, v1.1</a><br>
+        See <a href="https://github.com/nhsuk/register-with-a-gp-design/blob/master/Register%20interaction%20flow/register-flow-v2.pdf">register-flow-v2</a>
+      </p>
+    </li>
+    <li>
+      <p>
         <a href="/mvp-v1/start">MVP, v1.0</a><br>
         Initial proposition, minimum viable product
       </p>
