--- a/app/views/mvp_v1_1/current-medication.html
+++ b/app/views/mvp_v1_1/current-medication.html
@@ -50,9 +50,9 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'current-gp' %}
+      {% set back = 'previous-address' %}
       {% if session.armedforces.leaving === 'yes' %}
-        {% set back = 'armed-forces' %}
+        {% set back = 'armed-forces-enlistment-date' %}
       {% endif %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
