--- a/app/views/mvp_v1_1/any-allergies.html
+++ b/app/views/mvp_v1_1/any-allergies.html
@@ -41,9 +41,9 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'current-gp' %}
-      {% if session.armedforces.leaving === 'yes' %}
-        {% set back = 'armed-forces' %}
+      {% set back = 'current-medication' %}
+      {% if session.health.medication === 'yes' %}
+        {% set back = 'current-medication-details' %}
       {% endif %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
