--- a/app/views/mvp_v1_1/current-gp.html
+++ b/app/views/mvp_v1_1/current-gp.html
@@ -41,7 +41,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'previous-address' %}
+      {% set back = 'home-address' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
