--- a/app/views/mvp_v1_1/date-of-birth.html
+++ b/app/views/mvp_v1_1/date-of-birth.html
@@ -45,7 +45,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'previous-name' %}
+      {% set back = 'name' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
