--- a/app/views/mvp_v1_1/previous-address.html
+++ b/app/views/mvp_v1_1/previous-address.html
@@ -41,7 +41,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'armed-forces' %}
+      {% set back = 'previous-name' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
