--- a/app/views/mvp_v1_1/previous-name.html
+++ b/app/views/mvp_v1_1/previous-name.html
@@ -48,7 +48,7 @@
 
     <div class="form-group -controls">
       <button type="submit" class="button">Continue</button>
-      {% set back = 'name' %}
+      {% set back = 'current-gp' %}
       {% if session.edit == true %}
         {% set back = 'confirm-details' %}
       {% endif %}
