Give a reason why we need contact details

--- a/app/views/mvp_v1_1/contact-details.html
+++ b/app/views/mvp_v1_1/contact-details.html
@@ -13,6 +13,8 @@
   <h1 class="primary">Your contact details</h1>
   <form method="post" class="measure">
 
+    <p>{{ practiceName }} may need to get in touch with you to complete your registration.</p>
+
     {% if error %}
       <div class="error-summary">
         <div>
